# bpp-seq

./: .gitignore  AUTHORS  AUTHORS.txt  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL.txt  Makefile.am  README.md  Seq.spec  autoclean.sh  autogen.sh  bpp-seq-config.cmake.in  bpp-seq.spec  buildPackages.sh  configure.ac  configure.in  package.cmake.in
Seq/: AAChargeIndex.h  AAIndex1Entry.cpp  AAIndex1Entry.h  AAIndex2Entry.cpp  AAIndex2Entry.h  AbstractAlphabet.cpp  AbstractAlphabet.h  AbstractISequence.cpp  AbstractISequence.h  AbstractISequence2.h  AbstractOSequence.cpp  AbstractOSequence.h  AbstractSequenceContainer.cpp  AbstractSequenceContainer.h  AlignedSequenceContainer.cpp  AlignedSequenceContainer.h  Alphabet.h  AlphabetExceptions.cpp  AlphabetExceptions.h  AlphabetIndex1.h  AlphabetIndex2.h  AlphabetState.h  AlphabetTools.cpp  AlphabetTools.h  BLOSUM50.cpp  BLOSUM50.h  CMakeLists.txt  CaseMaskedAlphabet.cpp  CaseMaskedAlphabet.h  Clustal.cpp  Clustal.h  CodonAlphabet.cpp  CodonAlphabet.h  CodonSiteTools.cpp  CodonSiteTools.h  CompressedVectorSiteContainer.cpp  CompressedVectorSiteContainer.h  DCSE.cpp  DCSE.h  DNA.cpp  (+144 more)
src/: CMakeLists.txt
src/Bpp/: Seq.all
src/Bpp/Seq/: Alphabet.all  CMakeLists.txt  CodonSiteTools.cpp  CodonSiteTools.h  Commentable.h  Container.all  CoreSequence.h  CoreSequenceSymbolList.h  CoreSite.h  CoreSymbolList.h  CruxSymbolListSite.h  DNAToRNA.cpp  DNAToRNA.h  DistanceMatrix.cpp  DistanceMatrix.h  Feature.all  GeneticCode.all  IntSymbolList.cpp  IntSymbolList.h  Io.all  NucleicAcidsReplication.cpp  NucleicAcidsReplication.h  ProbabilisticSequence.cpp  ProbabilisticSequence.h  ProbabilisticSite.cpp  ProbabilisticSite.h  ProbabilisticSymbolList.cpp  ProbabilisticSymbolList.h  Sequence.cpp  Sequence.h  SequenceExceptions.cpp  SequenceExceptions.h  SequenceIterator.h  SequencePositionIterators.cpp  SequencePositionIterators.h  SequenceTools.cpp  SequenceTools.h  SequenceWalker.cpp  SequenceWalker.h  SequenceWithAnnotation.cpp  (+26 more)
src/Bpp/Seq/Alphabet/: AbstractAlphabet.cpp  AbstractAlphabet.h  AllelicAlphabet.cpp  AllelicAlphabet.h  Alphabet.h  AlphabetExceptions.cpp  AlphabetExceptions.h  AlphabetNumericState.h  AlphabetState.h  AlphabetTools.cpp  AlphabetTools.h  BinaryAlphabet.cpp  BinaryAlphabet.h  CaseMaskedAlphabet.cpp  CaseMaskedAlphabet.h  ChromosomeAlphabet.cpp  ChromosomeAlphabet.h  CodonAlphabet.cpp  CodonAlphabet.h  DNA.cpp  DNA.h  DefaultAlphabet.cpp  DefaultAlphabet.h  EchinodermMitochondrialCodonAlphabet.cpp  EchinodermMitochondrialCodonAlphabet.h  IntegerAlphabet.cpp  IntegerAlphabet.h  InvertebrateMitochondrialCodonAlphabet.cpp  LetterAlphabet.cpp  LetterAlphabet.h  LexicalAlphabet.cpp  LexicalAlphabet.h  NucleicAlphabet.h  NucleicAlphabetState.h  NumericAlphabet.cpp  NumericAlphabet.h  ProteicAlphabet.cpp  ProteicAlphabet.h  ProteicAlphabetState.h  RNA.cpp  (+10 more)
src/Bpp/Seq/AlphabetIndex/: AAChargeIndex.h  AAChenGuHuangHydrophobicityIndex.h  AAChouFasmanAHelixIndex.h  AAChouFasmanBSheetIndex.h  AAChouFasmanTurnIndex.h  AAIndex1Entry.cpp  AAIndex1Entry.h  AAIndex2Entry.cpp  AAIndex2Entry.h  AAMassIndex.h  AASEA1030Index.h  AASEAInf10Index.h  AASEASup30Index.h  AASurfaceIndex.h  AAVolumeIndex.h  AlphabetIndex1.h  AlphabetIndex2.h  BLOSUM50.cpp  BLOSUM50.h  CodonFromProteicAlphabetIndex1.h  CodonFromProteicAlphabetIndex2.h  DefaultNucleotideScore.cpp  DefaultNucleotideScore.h  GranthamAAChemicalDistance.cpp  GranthamAAChemicalDistance.h  GranthamAAPolarityIndex.h  GranthamAAVolumeIndex.h  KD_AAHydropathyIndex.h  KleinAANetChargeIndex.h  MiyataAAChemicalDistance.cpp  MiyataAAChemicalDistance.h  SimpleIndexDistance.h  SimpleScore.cpp  SimpleScore.h  UserAlphabetIndex1.h  UserAlphabetIndex2.h  __BLOSUM50MatrixCode  __GranthamMatrixCode  __MiyataMatrixCode
src/Bpp/Seq/App/: BppSequenceApplication.cpp  BppSequenceApplication.h  SequenceApplicationTools.cpp  SequenceApplicationTools.h
src/Bpp/Seq/Container/: AbstractProbabilisticSequenceContainer.h  AbstractSequenceContainer.cpp  AbstractSequenceContainer.h  AbstractValuesContainer.h  AlignedSequenceContainer.cpp  AlignedSequenceContainer.h  AlignedValuesContainer.h  AlignmentData.h  CompressedVectorSiteContainer.cpp  CompressedVectorSiteContainer.h  MapSequenceContainer.cpp  MapSequenceContainer.h  MappedNamedContainer.h  NamedContainer.h  OrderedSequenceContainer.h  OrderedValuesContainer.h  PositionedContainer.h  PositionedNamedContainer.h  ProbabilisticSequenceContainer.h  ProbabilisticSiteContainer.h  SequenceContainer.h  SequenceContainerExceptions.h  SequenceContainerIterator.cpp  SequenceContainerIterator.h  SequenceContainerTools.cpp  SequenceContainerTools.h  SequenceData.h  SequencedValuesContainer.h  SiteContainer.h  SiteContainerExceptions.cpp  SiteContainerExceptions.h  SiteContainerIterator.cpp  SiteContainerIterator.h  SiteContainerTools.cpp  SiteContainerTools.h  SiteIterator.cpp  SiteIterator.h  VectorIntSiteContainer.cpp  VectorIntSiteContainer.h  VectorMappedContainer.h  (+11 more)
src/Bpp/Seq/Feature/: Gff.all  Gtf.all  SequenceFeature.cpp  SequenceFeature.h
src/Bpp/Seq/GeneticCode/: AscidianMitochondrialGeneticCode.cpp  AscidianMitochondrialGeneticCode.h  CiliateNuclearGeneticCode.cpp  CiliateNuclearGeneticCode.h  EchinodermMitochondrialGeneticCode.cpp  EchinodermMitochondrialGeneticCode.h  GeneticCode.cpp  GeneticCode.h  InvertebrateMitochondrialGeneticCode.cpp  InvertebrateMitochondrialGeneticCode.h  MoldMitochondrialGeneticCode.cpp  MoldMitochondrialGeneticCode.h  StandardGeneticCode.cpp  StandardGeneticCode.h  VertebrateMitochondrialGeneticCode.cpp  VertebrateMitochondrialGeneticCode.h  YeastMitochondrialGeneticCode.cpp  YeastMitochondrialGeneticCode.h
src/Bpp/Seq/Io/: AbstractIAlignment.h  AbstractISequence.h  AbstractISequence2.h  AbstractOAlignment.h  AbstractOSequence.h  Clustal.cpp  (+68 more)
test/: CMakeLists.txt  counts.fa  counts.pa  test_ChromosomeAlphabet.cpp  test_alignment_scores.cpp  test_allelic_likelihood.cpp  test_alphabets.cpp  test_bowker.cpp  test_containers.cpp  test_fastq.cpp  test_gff.cpp  test_io.cpp  test_probseq.cpp  test_sequences.cpp  test_walker.cpp
(+53 files in other folders)
