AC_INIT(Seq/Sequence.h)
AM_INIT_AUTOMAKE(Seq,0.1)
AC_LANG_CPLUSPLUS
AC_CHECK_LIB(utils,   main, , [AC_MSG_ERROR([Library utils not found.])])
AC_CHECK_LIB(numcalc, main, , [AC_MSG_ERROR([Library numcalc not found.])])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_ARG_WITH(
	[virtual-cov],
	[  --with-virtual-cov      Enable covariant return type with
	                  virtual inheritance (GCC >= 3.4)],
	[$with_virtual_cov=yes]
)
if test "$with_virtual_cov" == "yes"
then
	AC_MSG_WARN([Covariant return type with virtual inheritance enabled.]);
	AC_DEFINE(VIRTUAL_COV, yes)
fi
AC_OUTPUT(Makefile Seq/Makefile)
