H_FILES = \
AbstractAlphabet.h\
AbstractISequence.h\
AbstractOSequence.h\
AbstractSequenceContainer.h\
AlignedSequenceContainer.h\
AlphabetExceptions.h\
Alphabet.h\
alphabets\
AlphabetTools.h\
Clustal.h\
CodonAlphabet.h\
containers\
DCSE.h\
DefaultAlphabet.h\
DNA.h\
DNAToRNA.h\
Fasta.h\
GeneticCode.h\
IOSequence.h\
ISequence.h\
MapSequenceContainer.h\
Mase.h\
MaseTools.h\
NucleicAlphabet.h\
OrderedSequenceContainer.h\
OSequence.h\
Phylip.h\
ProteicAlphabet.h\
RNA.h\
SequenceContainerExceptions.h\
SequenceContainer.h\
SequenceContainerTools.h\
SequenceExceptions.h\
Sequence.h\
SequenceTools.h\
SiteContainerExceptions.h\
SiteContainer.h\
SiteContainerTools.h\
SiteExceptions.h\
Site.h\
SiteIterator.h\
SiteTools.h\
StandardCodonAlphabet.h\
StandardGeneticCode.h\
StringSequenceTools.h\
SymbolList.h\
SymbolListTools.h\
Translator.h\
VectorSequenceContainer.h\
VectorSiteContainer.h

CPP_FILES = \
AbstractAlphabet.cpp\
AbstractISequence.cpp\
AbstractOSequence.cpp\
AbstractSequenceContainer.cpp\
AlignedSequenceContainer.cpp\
AlphabetExceptions.cpp\
AlphabetTools.cpp\
Clustal.cpp\
CodonAlphabet.cpp\
DCSE.cpp\
DefaultAlphabet.cpp\
DNA.cpp\
DNAToRNA.cpp\
Fasta.cpp\
GeneticCode.cpp\
MapSequenceContainer.cpp\
Mase.cpp\
MaseTools.cpp\
NucleicAlphabet.cpp\
Phylip.cpp\
ProteicAlphabet.cpp\
RNA.cpp\
SequenceContainerExceptions.cpp\
SequenceContainerTools.cpp\
Sequence.cpp\
SequenceExceptions.cpp\
SequenceTools.cpp\
SiteContainerExceptions.cpp\
SiteContainerTools.cpp\
Site.cpp\
SiteExceptions.cpp\
SiteIterator.cpp\
SiteTools.cpp\
StandardCodonAlphabet.cpp\
StandardGeneticCode.cpp\
StringSequenceTools.cpp\
SymbolList.cpp\
SymbolListTools.cpp\
Translator.cpp\
VectorSequenceContainer.cpp\
VectorSiteContainer.cpp

lib_LTLIBRARIES = libseq.la
libseq_la_SOURCES = $(H_FILES) $(CPP_FILES)
libseq_la_LDFLAGS = -version-info 1:0:0

library_includedir=$(includedir)/Seq
library_include_HEADERS = $(H_FILES)
