H_FILES = \
AbstractAlphabet.h\
AbstractISequence.h\
AbstractOSequence.h\
AbstractSequenceContainer.h\
AlignedSequenceContainer.h\
AlphabetExceptions.h\
Alphabet.h\
AlphabetIndex1.h\
AlphabetIndex2.h\
alphabets\
AlphabetTools.h\
Clustal.h\
CodonAlphabet.h\
CodonSiteTools.h\
containers\
DCSE.h\
DefaultAlphabet.h\
DNA.h\
DNAToRNA.h\
Fasta.h\
GeneticCode.h\
GranthamAAChemicalDistance.h\
GranthamAAPolarityIndex.h\
GranthamAAVolumeIndex.h\
MiyataAAChemicalDistance.h\
SimpleIndexDistance.h\
IOSequence.h\
ISequence.h\
ioseq\
MapSequenceContainer.h\
Mase.h\
MaseTools.h\
NucleicAlphabet.h\
NucleicAcidsReplication.h\
OrderedSequenceContainer.h\
OSequence.h\
Phylip.h\
ProteicAlphabet.h\
RNA.h\
SequenceContainerExceptions.h\
SequenceContainer.h\
SequenceContainerTools.h\
SequenceExceptions.h\
Sequence.h\
SequenceTools.h\
SiteContainerExceptions.h\
SiteContainer.h\
SiteContainerTools.h\
SiteExceptions.h\
Site.h\
SiteIterator.h\
SiteTools.h\
StandardCodonAlphabet.h\
StandardGeneticCode.h\
VertebrateMitochondrialCodonAlphabet.h\
VertebrateMitochondrialGeneticCode.h\
InvertebrateMitochondrialCodonAlphabet.h\
InvertebrateMitochondrialGeneticCode.h\
EchinodermMitochondrialCodonAlphabet.h\
EchinodermMitochondrialGeneticCode.h\
StringSequenceTools.h\
SymbolList.h\
SymbolListTools.h\
Translator.h\
VectorSequenceContainer.h\
VectorSiteContainer.h

CPP_FILES = \
AbstractAlphabet.cpp\
AbstractSequenceContainer.cpp\
AlignedSequenceContainer.cpp\
AlphabetExceptions.cpp\
AlphabetTools.cpp\
Clustal.cpp\
CodonAlphabet.cpp\
CodonSiteTools.cpp\
DCSE.cpp\
DefaultAlphabet.cpp\
DNA.cpp\
DNAToRNA.cpp\
Fasta.cpp\
GeneticCode.cpp\
GranthamAAChemicalDistance.cpp\
MiyataAAChemicalDistance.cpp\
MapSequenceContainer.cpp\
Mase.cpp\
MaseTools.cpp\
NucleicAcidsReplication.cpp\
Phylip.cpp\
ProteicAlphabet.cpp\
RNA.cpp\
SequenceContainerExceptions.cpp\
SequenceContainerTools.cpp\
Sequence.cpp\
SequenceExceptions.cpp\
SequenceTools.cpp\
SiteContainerExceptions.cpp\
SiteContainerTools.cpp\
Site.cpp\
SiteExceptions.cpp\
SiteIterator.cpp\
SiteTools.cpp\
StandardCodonAlphabet.cpp\
StandardGeneticCode.cpp\
VertebrateMitochondrialCodonAlphabet.cpp\
VertebrateMitochondrialGeneticCode.cpp\
InvertebrateMitochondrialCodonAlphabet.cpp\
InvertebrateMitochondrialGeneticCode.cpp\
EchinodermMitochondrialCodonAlphabet.cpp\
EchinodermMitochondrialGeneticCode.cpp\
StringSequenceTools.cpp\
SymbolList.cpp\
SymbolListTools.cpp\
Translator.cpp\
VectorSequenceContainer.cpp\
VectorSiteContainer.cpp

CPP_EXTRA = \
__GranthamMatrixCode.cpp\
__MiyataMatrixCode.cpp

lib_LTLIBRARIES = libseq.la
libseq_la_SOURCES = $(H_FILES) $(CPP_FILES)
EXTRA_libseq_la_SOURCES = $(CPP_EXTRA)
libseq_la_LDFLAGS = -version-info 1:0:0

library_includedir=$(includedir)/Seq
library_include_HEADERS = $(H_FILES)
